Used convolutions and MaxPooling

--- a/MNIST_Kaggle_Dataset.ipynb
+++ b/MNIST_Kaggle_Dataset.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "MNIST Kaggle Dataset.ipynb",
       "provenance": [],
-      "mount_file_id": "1lr-OBJ-a3xjMyRHllveH2owjWSgCRpNh",
-      "authorship_tag": "ABX9TyP7TxMPaditZ7SEwgbMwdJy",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/debjit31/MNIST-Digit-Recognizer/blob/master/MNIST_Kaggle_Dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -39,7 +27,7 @@
         "import matplotlib.pyplot as plt\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 97,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -56,7 +44,7 @@
         "test_path = '/content/drive/My Drive/digit-recognizer/test.csv'\n",
         "test_data = pd.read_csv(test_path)"
       ],
-      "execution_count": 98,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -68,12 +56,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 244
         },
-        "outputId": "9787061c-ac3c-4e25-b767-4e646a9d1ca1"
+        "outputId": "ddc29470-3418-4ad1-bc1f-481fa1d9bc45"
       },
       "source": [
         "test_data.head()"
       ],
-      "execution_count": 99,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +608,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "execution_count": 4
         }
       ]
     },
@@ -633,12 +621,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 244
         },
-        "outputId": "e15647ac-4b99-43c7-89cb-decae07d8e61"
+        "outputId": "352b0355-59f6-41ce-f446-7bb54184469c"
       },
       "source": [
         "train_data.head()"
       ],
-      "execution_count": 100,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1185,7 +1173,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 100
+          "execution_count": 5
         }
       ]
     },
@@ -1198,12 +1186,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "a8c9266e-01ec-4f3c-a3f8-77b5afebe764"
+        "outputId": "2856aaa2-c7aa-466f-f29d-90365672b434"
       },
       "source": [
         "train_data.info()"
       ],
-      "execution_count": 101,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,12 +1215,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 118
         },
-        "outputId": "620e28a7-fd7d-44b6-aded-6f958a7afce5"
+        "outputId": "c1ba6bcb-3459-45f6-a2e9-1d640a647f2c"
       },
       "source": [
         "train_data.columns"
       ],
-      "execution_count": 102,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1249,7 +1237,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 7
         }
       ]
     },
@@ -1262,7 +1250,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 67
         },
-        "outputId": "26287075-825b-406e-8455-1f1cb547f1d8"
+        "outputId": "8bd56a58-18db-42b1-ad89-dabc3ff8f853"
       },
       "source": [
         "y_train = train_data['label'].to_numpy()\n",
@@ -1270,7 +1258,7 @@
         "print(y_train.shape)\n",
         "print(type(train_data['label']))"
       ],
-      "execution_count": 123,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1292,14 +1280,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "391a77ca-5c7d-43e8-d178-978056a474d4"
+        "outputId": "41521e71-1deb-4645-bebe-61234dbaf02d"
       },
       "source": [
         "x_train = train_data.iloc[:, 1:].to_numpy()\n",
         "print(x_train.shape)\n",
         "print(type(x_train))"
       ],
-      "execution_count": 104,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1312,7 @@
         "  x_tr.append(x_train[i].reshape(28,28))\n",
         "X_train = np.array(x_tr)"
       ],
-      "execution_count": 105,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1341,7 +1329,7 @@
         "  x_te.append(x_test[i].reshape(28, 28))\n",
         "X_test = np.array(x_te)\n"
       ],
-      "execution_count": 106,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1353,12 +1341,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "055be581-290d-4c58-b935-3e28eaaf562b"
+        "outputId": "50cab330-3de2-4ba4-ad93-3439c2abf82f"
       },
       "source": [
         "X_test.shape"
       ],
-      "execution_count": 107,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1370,7 +1358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 14
         }
       ]
     },
@@ -1383,12 +1371,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "97036202-5d97-4b77-ed2b-5c685437466d"
+        "outputId": "e33fbed9-9262-4230-bdb8-84b068258479"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 108,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1400,9 +1388,23 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "32XuKNR2XPPT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X_train = X_train.reshape(42000, 28, 28, 1)\n",
+        "X_test = X_test.reshape(28000, 28, 28, 1)"
+      ],
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1415,7 +1417,7 @@
         "X_train = X_train / 255.0\n",
         "X_test = X_test / 255.0"
       ],
-      "execution_count": 109,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1428,8 +1430,8 @@
       "source": [
         "class MyCallback(tf.keras.callbacks.Callback):\n",
         "  def on_epoch_end(self, eopch, logs={}):\n",
-        "    if logs.get('accuracy') >= 0.99:\n",
-        "      print(\"\\nReached 95% Accuracy,  Cancelling Training!!!\\n\")\n",
+        "    if logs.get('loss') <= 0.01:\n",
+        "      print(\"\\nReached Target Loss Accuraccy,  Cancelling Training!!!\\n\")\n",
         "      self.model.stop_training=True\n",
         "\n",
         "\n",
@@ -1438,19 +1440,28 @@
         "  callback = MyCallback()\n",
         "  model = tf.keras.models.Sequential()\n",
         "\n",
-        "  model.add(tf.keras.layers.Flatten(input_shape=(28,28)))\n",
-        "  model.add(tf.keras.layers.Dense(1024, activation=tf.nn.relu))\n",
-        "  model.add(tf.keras.layers.Dense(10, activation=tf.nn.softmax))\n",
+        "  model = tf.keras.models.Sequential([\n",
+        "                                      \n",
+        "      tf.keras.layers.Conv2D(64, (3,3), activation='relu', input_shape=(28, 28, 1)),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "\n",
+        "      tf.keras.layers.Conv2D(64, (3,3), activation = 'relu'),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "\n",
+        "      tf.keras.layers.Flatten(), \n",
+        "      tf.keras.layers.Dense(512, activation='relu'),\n",
+        "      tf.keras.layers.Dense(10, activation='softmax')\n",
+        "  ])\n",
         "\n",
         "  model.compile(optimizer = tf.optimizers.Adam(), \n",
         "                loss = 'sparse_categorical_crossentropy',\n",
         "                metrics = ['accuracy'])\n",
         "  \n",
-        "  model.fit(X_train, y_train, epochs = 1000, callbacks = [callback])\n",
+        "  model.fit(X_train, y_train, epochs = 20, callbacks = [callback])\n",
         "\n",
         "  return model\n"
       ],
-      "execution_count": 110,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1460,31 +1471,37 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 235
+          "height": 336
         },
-        "outputId": "e187b1ff-a383-4a5c-fc54-f10209d02590"
+        "outputId": "d6d59806-d6c8-4e4f-ee2d-feebd0939bfc"
       },
       "source": [
         "model = train_model()"
       ],
-      "execution_count": 111,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/1000\n",
-            "1313/1313 [==============================] - 3s 3ms/step - loss: 0.2106 - accuracy: 0.9368\n",
-            "Epoch 2/1000\n",
-            "1313/1313 [==============================] - 3s 3ms/step - loss: 0.0831 - accuracy: 0.9745\n",
-            "Epoch 3/1000\n",
-            "1313/1313 [==============================] - 3s 3ms/step - loss: 0.0530 - accuracy: 0.9833\n",
-            "Epoch 4/1000\n",
-            "1313/1313 [==============================] - 3s 3ms/step - loss: 0.0353 - accuracy: 0.9883\n",
-            "Epoch 5/1000\n",
-            "1293/1313 [============================>.] - ETA: 0s - loss: 0.0291 - accuracy: 0.9902\n",
-            "Reached 95% Accuracy,  Cancelling Training!!!\n",
+            "Epoch 1/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.1267 - accuracy: 0.9602\n",
+            "Epoch 2/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0410 - accuracy: 0.9866\n",
+            "Epoch 3/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0265 - accuracy: 0.9920\n",
+            "Epoch 4/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0188 - accuracy: 0.9938\n",
+            "Epoch 5/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0156 - accuracy: 0.9949\n",
+            "Epoch 6/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0119 - accuracy: 0.9960\n",
+            "Epoch 7/20\n",
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0107 - accuracy: 0.9964\n",
+            "Epoch 8/20\n",
+            "1305/1313 [============================>.] - ETA: 0s - loss: 0.0063 - accuracy: 0.9983\n",
+            "Reached Target Loss Accuraccy,  Cancelling Training!!!\n",
             "\n",
-            "1313/1313 [==============================] - 3s 3ms/step - loss: 0.0292 - accuracy: 0.9903\n"
+            "1313/1313 [==============================] - 7s 6ms/step - loss: 0.0063 - accuracy: 0.9983\n"
           ],
           "name": "stdout"
         }
@@ -1500,7 +1517,7 @@
       "source": [
         "pred = model.predict(X_test)"
       ],
-      "execution_count": 112,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1512,26 +1529,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 67
         },
-        "outputId": "ee8e7077-13b1-44ec-d8cd-369931ac267d"
+        "outputId": "8a18beac-954d-4dbf-9493-69d6b8e9687d"
       },
       "source": [
         "pred[0]"
       ],
-      "execution_count": 113,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([1.1323200e-13, 2.3464272e-15, 1.0000000e+00, 8.4438324e-11,\n",
-              "       1.4296402e-13, 2.4832729e-13, 2.1084511e-13, 2.7024092e-09,\n",
-              "       2.3744973e-12, 4.6741263e-14], dtype=float32)"
+              "array([2.9743198e-15, 3.0533880e-17, 1.0000000e+00, 2.7910110e-14,\n",
+              "       1.3626843e-10, 9.7236276e-23, 3.1014943e-18, 2.1354828e-13,\n",
+              "       3.0286029e-14, 1.2250153e-15], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 113
+          "execution_count": 24
         }
       ]
     },
@@ -1548,7 +1565,7 @@
         "  y = pred[i].tolist()\n",
         "  predictions.append([i+1, y.index(max(y))])"
       ],
-      "execution_count": 114,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -1560,12 +1577,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "28f7aed3-14ff-4e6c-c71c-e88b3c779101"
+        "outputId": "a9bc2b6a-8d79-4a7a-f76b-5fbd6ae77ee7"
       },
       "source": [
         "predictions[-1]"
       ],
-      "execution_count": 115,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,7 +1594,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 115
+          "execution_count": 26
         }
       ]
     },
@@ -1590,14 +1607,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "c72b2e41-89ee-4df9-d487-2373260ddfb8"
+        "outputId": "335103a1-8395-45d2-eaa1-b1461025b33f"
       },
       "source": [
         "predictions=np.array(predictions)\n",
         "print(predictions.shape)\n",
         "print(type(predictions))"
       ],
-      "execution_count": 129,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1618,13 +1635,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 639
         },
-        "outputId": "1b7c17da-c645-4707-9412-eda31cf28340"
+        "outputId": "00f2b4ae-3eb3-4c18-f674-246beb8ba49f"
       },
       "source": [
         "sub = pd.DataFrame(data=predictions, columns = ['ImageId', 'Label'])\n",
         "sub.head(20)"
       ],
-      "execution_count": 134,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1784,7 +1801,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 134
+          "execution_count": 28
         }
       ]
     },
@@ -1798,7 +1815,7 @@
       "source": [
         "sub.to_csv('MNIST Predictions.csv', index=False)"
       ],
-      "execution_count": 133,
+      "execution_count": 29,
       "outputs": []
     }
   ]
